# FourStrategies

./: CMakeLists.txt  README.md  closures.c  closures.h  linked_list.c  linked_list.h  main.c  test.c  test.h
